--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,8 +6,8 @@ kotlin = "2.0.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
-mediaPipe = "0.20230731"
-ksp = "1.9.22-1.0.17"
+mediaPipe = "0.10.11"
+ksp = "2.0.21-1.0.25"
 espressoCore = "3.7.0"
 kotlinxCoroutinesPlayServices = "1.10.2"
 lifecycleRuntimeKtx = "2.9.4"
